[package]
name = "blehub"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768"] }
esp-backtrace = { version = "0.17.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = ["unstable"] }
esp-hal-embassy = { version = "0.9.0" }
esp-alloc = { version = "0.8.0" }
esp-println = { version = "0.15.0", features = ["log-04"] }
esp-wifi = { version = "0.15.0", features = ["ble"] }
# trouble-example-apps = { version = "0.1.0", path = "../apps", features = [
#     "log",
# ] }
# trouble-host = { path = "../../host", features = [
#     "default-packet-pool-mtu-255",
# ] }
embassy-sync = { version = "0.7.0" }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

esp-bootloader-esp-idf = { version = "0.2.0", optional = true, features = [
    "esp32c6",
    "log-04",
] }

sht3x = { path = "../sht3x" }

defmt = { version = "1.0.1", optional = true }
defmt-rtt = "1.0.0"

heapless = "0.8.0"

embedded-graphics = "0.8.1"

ssd1306 = { version = "0.10.0", features = ["async"] }

embassy-time = "0.4.0"
static_cell = "2.1.1"
embassy-futures = "0.1.1"

trouble-host = { version = "0.2.4", features = ["default-packet-pool-mtu-255"] }
rand_core = { version = "0.6", default-features = false }
log = { version = "0.4", optional = true }
bt-hci = { version = "0.3.2" }

[features]
default = ["esp32c6"]

defmt = ["dep:defmt", "sht3x/defmt", "embassy-sync/defmt"]

log = ["dep:log", "trouble-host/log", "bt-hci/log"]

esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
    "esp-hal-embassy/esp32",
    "esp-println/esp32",
    "esp-wifi/esp32",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-hal-embassy/esp32c2",
    "esp-println/esp32c2",
    "esp-wifi/esp32c2",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-println/esp32c3",
    "esp-wifi/esp32c3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-println/esp32c6",
    "esp-wifi/esp32c6",
    "esp-bootloader-esp-idf",
]
esp32h2 = [
    "esp-hal/esp32h2",
    "esp-backtrace/esp32h2",
    "esp-hal-embassy/esp32h2",
    "esp-println/esp32h2",
    "esp-wifi/esp32h2",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-println/esp32s3",
    "esp-wifi/esp32s3",
]

security = ["trouble-host/security"]
